Improve getting_started notebook and README

--- a/notebooks/getting_started.ipynb
+++ b/notebooks/getting_started.ipynb
@@ -65,6 +65,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Save cleaned data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scripts.clean_datasets import main\n",
+    "main(Path('Data'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Preview cleaned data"
    ]
   },
